base model sentiment analysis

--- a/Preprocessing_scrape.ipynb
+++ b/Preprocessing_scrape.ipynb
@@ -12,7 +12,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Formating\n"
+    "## Formating of review data\n"
    ]
   },
   {
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -157,10 +157,72 @@
     "\n",
     "unlabeled_df.to_csv(\"unlabeled_reviews.csv\", index=False)\n",
     "\n",
+    "\n",
+    "\n",
     "print(unlabeled_df.isna().sum())\n",
     "\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is used to simulate smaller sample"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Combining and fixing the data for player count and macro data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/nz/1d138x554532lzm46blcd3y80000gn/T/ipykernel_36252/3223595577.py:14: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "  player_count[\"date\"] = pd.to_datetime(player_count[\"date\"], errors='coerce')\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "import pandas as pd\n",
+    "\n",
+    "\n",
+    "player_count_path = \"/Users/apple/Documents/GitHub/Steam-Market-Data-ML/player_count_reviews.csv\"\n",
+    "player_count = pd.read_csv(player_count_path)\n",
+    "\n",
+    "\n",
+    "player_count[\"player_count\"] =  player_count[\"player_count\"].str.replace(\",\", \"\", regex=False).astype(float)\n",
+    "\n",
+    "\n",
+    "\n",
+    "player_count[\"gain\"] = player_count[\"gain\"].str.replace(\",\", \"\", regex=False).astype(float)\n",
+    "\n",
+    "player_count[\"date\"] = pd.to_datetime(player_count[\"date\"], errors='coerce')\n",
+    "\n",
+    "\n",
+    " \n",
+    "macro_data_path = \"/Users/apple/Documents/GitHub/Steam-Market-Data-ML/macro_reviews.csv\"\n",
+    "macro_data = pd.read_csv(macro_data_path)\n",
+    "\n",
+    "merge_data = pd.merge(player_count,macro_data, on=\"game_id\",how=\"left\")\n",
+    "\n",
+    "merge_data[\"total_review\"] = merge_data[\"total_review\"].str.replace(\",\", \"\", regex=False).astype(float)\n",
+    "merge_data[\"peak_player\"] = merge_data[\"peak_player\"].str.replace(\",\", \"\", regex=False).astype(float)\n",
+    "merge_data[\"game_id\"] = merge_data[\"game_id\"].astype(int)\n",
+    "merge_data['positive_percent'] = merge_data['positive_percent'].str.replace('%', '').astype(float) / 100\n",
+    "merge_data.to_csv(\"merged_player_count.csv\", index=False)\n"
    ]
   }
  ],
