--- a/base_model_review.ipynb
+++ b/base_model_review.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Base sentiment analysis training(sklearn)"
+    "# Base sentiment labling -- prediciting labels with non missing/accurate data(sklearn)"
    ]
   },
   {
