added other file creation for generating noise

--- a/Preprocessing_scrape.ipynb
+++ b/Preprocessing_scrape.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -107,16 +107,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "83522\n",
-      "<class 'numpy.ndarray'>\n",
-      "[62826  8158 41253 ... 33412  4496 63762]\n",
+      "count           58466\n",
+      "unique              2\n",
+      "top       Recommended\n",
+      "freq            39421\n",
+      "Name: recommend, dtype: object\n",
+      "------------\n",
       "steam_id              0\n",
       "game_time             0\n",
       "recommend         25056\n",
@@ -137,7 +140,7 @@
     "import pandas as pd\n",
     "import numpy as np \n",
     "unlabeled_df = pd.read_csv(\"/Users/apple/Documents/GitHub/Steam-Market-Data-ML/cleaned_reviews.csv\")\n",
-    "print(len(unlabeled_df))\n",
+    "# print(len(unlabeled_df))\n",
     "unlabel_percentage = 0.3\n",
     "num_unlabeled = int(len(df) * unlabel_percentage)\n",
     "\n",
@@ -149,8 +152,8 @@
     "# replace=False meaning that value can only be selected once\n",
     "unlabeled_df.index\n",
     "unlabeled_index = np.random.choice(unlabeled_df.index, num_unlabeled, replace=False)\n",
-    "print(type(unlabeled_index))\n",
-    "print(unlabeled_index)\n",
+    "# print(type(unlabeled_index))\n",
+    "# print(unlabeled_index)\n",
     "\n",
     "\n",
     "unlabeled_df.loc[unlabeled_index, \"recommend\"] = np.nan  # Set selected labels to NaN (unlabeled)\n",
@@ -158,7 +161,8 @@
     "unlabeled_df.to_csv(\"unlabeled_reviews.csv\", index=False)\n",
     "\n",
     "\n",
-    "\n",
+    "print(unlabeled_df[\"recommend\"].describe())\n",
+    "print(\"------------\")\n",
     "print(unlabeled_df.isna().sum())\n",
     "\n",
     "\n",
@@ -171,6 +175,102 @@
    "source": [
     "This is used to simulate smaller sample"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# generate artifical noise in labeled (the noise is created at random)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "count           66008\n",
+      "unique              2\n",
+      "top       Recommended\n",
+      "freq            40248\n",
+      "Name: recommend, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "relabeled_data = pd.read_csv(\"/Users/apple/Documents/GitHub/Steam-Market-Data-ML/unlabeled_reviews.csv\")\n",
+    "\n",
+    "# Define the percentage of data to be unlabeled\n",
+    "unlabel_percentage = 0.3\n",
+    "num_unlabeled = int(len(relabeled_data) * unlabel_percentage)\n",
+    "\n",
+    "# Randomly select indices to be unlabeled\n",
+    "unlabeled_index = np.random.choice(relabeled_data.index, num_unlabeled, replace=False)\n",
+    "\n",
+    "# Set selected labels to random categories\n",
+    "relabeled_data.loc[unlabeled_index, \"recommend\"] = np.random.choice([\"Recommended\", \"Not Recommended\"], size=num_unlabeled)\n",
+    "print(relabeled_data[\"recommend\"].describe())\n",
+    "relabeled_data.to_csv(\"/Users/apple/Documents/GitHub/Steam-Market-Data-ML/relabeled_reviews.csv\", index=False)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# create completly opposite data noise(the noise is created by negation)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "count           58466\n",
+      "unique              2\n",
+      "top       Recommended\n",
+      "freq            33333\n",
+      "Name: recommend, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "\n",
+    "opposite_data = pd.read_csv(\"/Users/apple/Documents/GitHub/Steam-Market-Data-ML/unlabeled_reviews.csv\")\n",
+    "\n",
+    "\n",
+    "unlabel_percentage = 0.3\n",
+    "num_unlabeled = int(len(opposite_data) * unlabel_percentage)\n",
+    "\n",
+    "\n",
+    "unlabeled_index = np.random.choice(opposite_data.index, num_unlabeled, replace=False)\n",
+    "\n",
+    "\n",
+    "opposite_data.loc[unlabeled_index, \"recommend\"] = opposite_data.loc[unlabeled_index, \"recommend\"].map(\n",
+    "    {\"Recommended\": \"Not Recommended\", \"Not Recommended\": \"Recommended\"}\n",
+    ")\n",
+    "\n",
+    "\n",
+    "print(opposite_data[\"recommend\"].describe())\n",
+    "\n",
+    "\n",
+    "opposite_data.to_csv(\"/Users/apple/Documents/GitHub/Steam-Market-Data-ML/opposite_data_reviews.csv\", index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
