--- a/base_model_review.ipynb
+++ b/base_model_review.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -84,12 +84,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Transforms text data into numerical features rather than embedding for the moment since for the base example it's less compuationally intensive and does the job for transfomation for the base models. Standarize and min max scaling are used for contious variable and that is why I didn't apply them here."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import StandardScaler"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## More detailed evlaution of the model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +153,12 @@
     "plt.xlabel(\"Predicted Label\")\n",
     "plt.ylabel(\"True Label\")\n",
     "plt.title(\"Confusion Matrix\")\n",
-    "plt.show()\n"
+    "plt.show()\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -151,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +188,7 @@
       "50%            1.000000\n",
       "75%            1.000000\n",
       "max            1.000000\n",
-      "-----------------------\n",
+      "----------------\n",
       "          recommend\n",
       "count  16705.000000\n",
       "mean       0.672194\n",
@@ -185,7 +206,7 @@
     "df_preds = pd.DataFrame(review_y_pred, columns= [\"Predicted Labels\"])\n",
     "print(df_preds.describe())\n",
     "\n",
-    "print(\"-----------------------\")\n",
+    "print(\"----------------\")\n",
     "\n",
     "df_test = pd.DataFrame(review_y_test) \n",
     "print(df_test.describe())\n",
@@ -196,7 +217,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is the summary statistic but what we care more is about the evaluation in this case, since the interpretation of the output data itself not a focus of the research problem rather than the labeling this of relative lesser importance. But we can compare it to the original labled data summary statistic. which is largly similar."
+    "This is the summary statistic but what we care more is about the evaluation in this case, since the interpretation of the output data itself not a focus of the research problem rather than the labeling this of relative lesser importance. But we can compare it to the original labled data summary statistic. which is largly similar. "
    ]
   },
   {
@@ -215,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
